# duty_board

./: README.md  pyproject.toml
duty_board/: api.py  bridge.py  client_room.py  dm.py  hooks.py  modules.txt  projects.py  push.py  sales.py  tasks.py
duty_board/doctype/duty_log/: duty_log.json
duty_board/doctype/work_session/: work_session.json  work_session.py
duty_board/document_hub/: DEPLOYMENT.md
duty_board/document_hub/doctype/client_document/: client_document.js  client_document.json  client_document.py  client_document_list.js
duty_board/document_hub/doctype/document_activity/: document_activity.json  document_activity.py
duty_board/document_hub/doctype/document_version/: document_version.json  document_version.py
duty_board/duty_board/doctype/chat_seen/: chat_seen.json  chat_seen.py
duty_board/duty_board/doctype/client_join_request/: client_join_request.json  client_join_request.py
duty_board/duty_board/doctype/client_room/: client_room.json  client_room.py
duty_board/duty_board/doctype/client_room_member/: client_room_member.json  client_room_member.py
duty_board/duty_board/doctype/client_room_seen/: client_room_seen.py  (+1 more)
duty_board/page/duty_board/: duty_board.js
duty_board/public/mobile/: assetlinks.json  duty_sw.js  install.html  manifest.webmanifest  portal.webmanifest  portal_sw.js
duty_board/report/daily_duty_summary/: daily_duty_summary.json  daily_duty_summary.py
duty_board/report/work_sessions/: work_sessions.json  work_sessions.py
duty_board/tests/: test_core.py
duty_board/www/: join.html  join.py  portal.html  portal.py
(+62 files in other folders)
