[project]
name = "duty_board"
authors = [
    { name = "Xlevel Retail Systems Ltd", email = "support@clouderp.one" }
]
description = "Simple remote-staff duty clock in/out tracker with a live status board"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
